Mobile view home: fixed grey text boxes to align properly.

--- a/css/index.css
+++ b/css/index.css
@@ -265,6 +265,7 @@ article .text div {
     display: block;
     width: 80%;
     text-align: center;
+    margin: 0 auto;
   }
 }
 article img {
@@ -334,14 +335,18 @@ article img {
   position: absolute;
   bottom: -45px;
   right: 0;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 0 20px;
 }
 @media (max-width:500px) {
   .container .img-wide h1 {
+    right: 10%;
+    left: 10%;
     bottom: -65px;
     flex-direction: none;
-    right: none;
+    padding: 0 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 @media (max-width:500px) {
@@ -365,6 +370,7 @@ article img {
 @media (max-width:500px) {
   .container .text-center {
     width: 85%;
+    padding-top: 60px;
   }
 }
 .container .text-center p {
@@ -374,6 +380,12 @@ article img {
 }
 .container .outskirts h1 {
   left: 0;
+}
+@media (max-width:500px) {
+  .container .outskirts h1 {
+    right: 10%;
+    left: 10%;
+  }
 }
 footer {
   background-color: #828282;
@@ -427,6 +439,11 @@ footer .copyright {
   height: 300px;
   background-image: url(../img/services/services-jumbotron.png);
 }
+@media (max-width:500px) {
+  .bg-image-service {
+    background-image: url(../img/services/services-mobile-jumbotron.png);
+  }
+}
 .jumbo-text-service {
   font-family: Roboto, Arial, sans-serif;
   color: white;
@@ -438,11 +455,10 @@ footer .copyright {
 }
 @media (max-width:500px) {
   .jumbo-text-service {
-    font-size: 3.5rem;
+    font-size: 4rem;
     font-weight: 600;
     padding-left: 20px;
-    margin-top: 80px;
-    line-height: 3.5rem;
+    margin-top: 150px;
   }
 }
 .service-content .top-text {
