--- a/less/maincontent.less
+++ b/less/maincontent.less
@@ -30,6 +30,7 @@ article {
                     display: block;
                     width: 80%;
                     text-align: center;
+                    margin: 0 auto;
                 }
             }
      } 
@@ -91,12 +92,16 @@ article {
             position: absolute;
             bottom: -45px;
             right: 0;
-            padding-left: 20px;
-            padding-right: 20px;
+            padding: 0 20px;
             @media @phone {
+                right: 10%;
+                left: 10%;
                 bottom: -65px;
                 flex-direction: none;
-                right: none;
+                padding: 0 20px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
         }
         .villas1 {
@@ -118,6 +123,8 @@ article {
        padding-top: 40px;
        @media @phone {
         width: 85%;
+        padding-top: 60px;
+        
     }
        p{
            font-size: 1.6rem;
@@ -129,6 +136,10 @@ article {
     .outskirts{
         h1{
         left: 0;
+        @media @phone {
+            right: 10%;
+            left: 10%;
+        }
         }
     }
 }
