--- a/less/services.less
+++ b/less/services.less
@@ -2,6 +2,9 @@
     background-size: cover;
     height: 300px;
     background-image: url(../img/services/services-jumbotron.png);
+    @media @phone{
+        background-image: url(../img/services/services-mobile-jumbotron.png);
+    }
 }
 
 .jumbo-text-service {
@@ -13,11 +16,10 @@
     margin-top: 175px;
     line-height: 7.5rem;
     @media @phone{
-        font-size: 3.5rem;
+        font-size: 4.0rem;
         font-weight: 600;
         padding-left: 20px;
-        margin-top: 80px;
-        line-height: 3.5rem;
+        margin-top: 150px;
     }
 }
 .service-content{
